<resources>
    <string name="app_name">Food Market</string>
    <string name="app_name_noSpace">FoodMarket</string>

    <!-- Icon Name -->
    <string name="ic_shop">ic_shop</string>

    <!-- Component View -->
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone">Phone No.</string>
    <string name="address">Address</string>
    <string name="house">House No.</string>
    <string name="city">City</string>
    <string name="edittext_email">Type your email address</string>
    <string name="edittext_password">Type your password</string>
    <string name="edittext_fullname">Type your fullname</string>
    <string name="edittext_phone">Type your phone</string>
    <string name="edittext_address">Type your address</string>
    <string name="edittext_house">Type your house</string>
    <string name="edittext_city">Type your city</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Create New Account</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_signup_now">Sign Up Now</string>
    <string name="btn_signup_complete">Find Foods</string>
    <string name="tv_complete">Yeay! Completed</string>
    <string name="tv_subcomplete">Now you are able to ordersome foods as a self-reward</string>

    <!--  Common  -->
    <string name="profile_picture">Profile Picture</string>
    <string name="title_toolbar_signin">Sign In</string>
    <string name="subtitle_toolbar_signin">Find your best ever meal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>