<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:fillViewport="true"
    tools:context=".ui.auth.signin.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFF"
        android:paddingHorizontal="24dp"
        android:paddingTop="10dp"
        tools:context=".ui.auth.signup.SignUpAddressFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_phone"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_address"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/house"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_house"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/city"
            style="@style/TextView.PoppinsNormal16sp020202"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/edittext_city"
            android:padding="10dp"
            android:background="@drawable/shape_8_transparent_ouline"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            />

    <Button
        android:id="@+id/btn_signUpNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_signup_now"
        android:background="@drawable/shape_8_ffc700"
        style="@style/Button.Primary"
        />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>