<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFF"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="24dp"
        android:paddingTop="26dp"
        tools:context=".ui.auth.signup.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_profile_picture"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/profile_picture"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_fullname"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/email_address"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_email"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_password"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_continue"
        android:background="@drawable/shape_8_ffc700"
        style="@style/Button.Primary"
        />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>