<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFF"
    android:layout_marginTop="24dp"
    android:paddingHorizontal="24dp"
    android:paddingTop="26dp"
    tools:context=".ui.auth.signin.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_email"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        style="@style/TextView.PoppinsNormal16sp020202"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/edittext_password"
        android:padding="10dp"
        android:background="@drawable/shape_8_transparent_ouline"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_signin"
        android:background="@drawable/shape_8_ffc700"
        style="@style/Button.Primary"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_signup"
        android:background="@drawable/shape_8_8d92a3"
        style="@style/Button.Secondary"
        />


</LinearLayout>